--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,8 @@ description-file =
     README.rst
     CHANGELOG.rst
 requires-dist =
-
+    kids.data>=0.0.5
+    kids.cache
 
 ## sdist info
 author = %%author%%
@@ -43,4 +44,4 @@ exe = 1
 with-coverage = 1
 cover-package = kids.cfg
 #cover-min-percentage = 90
-doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
+doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE,+IGNORE_EXCEPTION_DETAIL
