fix: pkg: travis changed it's parsing rules.
Suddenly the ``&`` is not accepted anymore.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install setuptools==9.1   ## version 10 introduce a bug with d2to1
   - pip install pip==1.5.6  ## some ``python setup.py`` black magic do not work with d2to1 and pip ``6.0.7``
   - pip install coverage coveralls
-  - [ -e requirements.txt ] && pip install -r requirements.txt
+  - if [ -e requirements.txt ]; then pip install -r requirements.txt; fi
 script:
   - ## checking that we can actually install it
   - python setup.py install
