new: can access conf files not yet created but listed.
If you had listed a local file in ``REPOS/.foo.rc`` and a global config
file in ``~/.foo.rc`` then you can store values and access them now via
``MConfig`` and the file will then get created.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ description-file =
 requires-dist =
     kids.data>=0.0.5
     kids.cache
+    kids.file>=0.0.5
 
 ## sdist info
 author = %%author%%
